# mdownreview

./: .gitignore  AGENTIC_DEVELOPMENT.md  AGENTS.md  AGENTS.md.review.yaml  BUILDING.md  CHANGELOG.md  CHANGELOG.md.review.json  CLAUDE.md  LICENSE  README.md  e2e-output.txt  eslint.config.js  npm-test-output.txt  package-lock.json  package.json  playwright.config.ts  playwright.native.config.ts  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: generate_fixtures.rs  hot_path_bench.rs  matching_bench.rs  parsers_bench.rs  scanner_bench.rs  sidecar_bench.rs  threads_bench.rs
src-tauri/benches/fixtures/: file_1000_lines.md  file_100_lines.md  file_100_lines.md.review.yaml  file_5000_lines.md
src-tauri/benches/fixtures/large/dir0/: file1.md  file1.md.review.json  file10.md  file10.md.review.json  file11.md  file11.md.review.json  file12.md  file12.md.review.json  file13.md  file13.md.review.json  file14.md  file14.md.review.json  file15.md  file15.md.review.json  file16.md  file16.md.review.json  file17.md  file17.md.review.json  file18.md  file18.md.review.json  file19.md  file19.md.review.json  file2.md  file2.md.review.json  file20.md  file20.md.review.json  file21.md  file21.md.review.json  file22.md  (+71 more)
src-tauri/benches/fixtures/medium/: file1.md.review.json  file10.md.review.json  file100.md  file100.md.review.json  file11.md.review.json  file12.md  file12.md.review.json  file13.md  file13.md.review.json  file14.md  file14.md.review.json  file15.md  file15.md.review.json  file16.md  file16.md.review.json  file17.md  file17.md.review.json  file18.md  file18.md.review.json  file19.md  file19.md.review.json  file20.md  file20.md.review.json  file21.md  file21.md.review.json  file22.md  file22.md.review.json  file23.md  file23.md.review.json  file24.md  file24.md.review.json  file25.md  file25.md.review.json  file26.md  file26.md.review.json  file27.md  file27.md.review.json  file28.md  file28.md.review.json  file29.md  (+146 more)
src-tauri/benches/fixtures/small/: file2.md.review.json  file5.md.review.json  file6.md.review.json
src-tauri/capabilities/: default.json
src-tauri/dmg/: README.md  README.txt
src-tauri/icons/: icon.icns
src-tauri/installer/: installer-hooks.nsh
src-tauri/src/: commands.rs  lib.rs  main.rs  update.rs  watcher.rs  watcher_tests.rs
src-tauri/src/commands/: cli_shim.rs  comments.rs  config.rs  default_handler.rs  folder_context.rs  fs.rs  html.rs  launch.rs  mod.rs  onboarding.rs  remote_asset.rs  search.rs  system.rs  word_tokens.rs
src-tauri/src/commands/cli_shim/: macos.rs  unsupported.rs  windows.rs
src-tauri/src/commands/comments/: badges.rs  export.rs  mod.rs  update.rs
src-tauri/src/commands/default_handler/: macos.rs  unsupported.rs  windows.rs
src-tauri/src/commands/folder_context/: unsupported.rs  windows.rs
src-tauri/src/core/: anchors.rs  atomic.rs  comments.rs  export.rs  fold_regions.rs  fuzzy.rs  html_assets.rs  matching.rs  mod.rs  mrsf_version.rs  onboarding.rs  paths.rs  scanner.rs  severity.rs  sidecar.rs  threads.rs  types.rs
src-tauri/src/core/anchors/: csv_cell.rs  html.rs  image_rect.rs  json_path.rs  mod.rs  word_range.rs
src-tauri/src/core/sidecar/: mod.rs  tests.rs
src-tauri/src/core/types/: mod.rs  tests.rs  wire.rs
src-tauri/tests/: cli_integration.rs  commands_integration.rs  comments_emit_test.rs
src-tauri/tests/fixtures/cli/: mixed.md  mixed.md.review.yaml  resolved.md  resolved.md.review.yaml
(+1494 files in other folders)
