[package]
name = "mdown-review"
version = "0.2.3"
description = "A desktop markdown reviewer for developers"
license = "MIT"
authors = ["davidzh"]
edition = "2021"

[lib]
name = "mdown_review_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
