[package]
name = "mdownreview"
version = "0.3.2"
description = "A desktop markdown reviewer for developers"
license = "MIT"
authors = ["davidzh"]
edition = "2021"
default-run = "mdownreview"
autobenches = false

[lib]
name = "mdown_review_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mdownreview-cli"
path = "src/bin/cli.rs"

[[example]]
name = "generate_bench_fixtures"
path = "benches/generate_fixtures.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
notify = "7"
notify-debouncer-mini = "0.5"
walkdir = "2"
serde_yaml = "0.9"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
tempfile = "3"
serde_yaml = "0.9"
serde_json = "1"
rand = "0.8"

[[bench]]
name = "sidecar_bench"
harness = false

[[bench]]
name = "matching_bench"
harness = false

[[bench]]
name = "scanner_bench"
harness = false

[[bench]]
name = "threads_bench"
harness = false

[[bench]]
name = "hot_path_bench"
harness = false
